--- a/style.css
+++ b/style.css
@@ -1,50 +1,80 @@
 /* Font Setup */
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400&family=Open+Sans:wght@400;700;800&family=Work+Sans:wght@400;700;800&display=swap');
 
+/* shared styles */
+.btn-primary {
+    border-radius: 8px;
+    background: #FF900E;
+    padding: 20px 25px;
+    color: #FFF;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 600;
+    border: 0;
+}
+
 * {
     font-family: 'Work Sans', sans-serif;
 }
 
 header {
     background: rgba(255, 144, 14, 0.10);
-}
-nav {
     padding: 50px 240px;
+}
+
+nav {
     display: flex;
     justify-content: space-between;
-    text-align: center;
+    align-items: center;
 }
-.nav-title{
+
+.nav-title {
     color: #131313;
     font-size: 2.81rem;
     font-weight: 700;
 }
-nav li a{
-    text-decoration: none ;
-    color: #424242;
-    margin-right: 30px;
-}
-nav > ul{
+
+nav>ul {
     display: flex;
     list-style: none;
     font-size: 1.1rem;
     font-weight: 500;
 }
-/* banner */
-.banner-head{
-    padding: 205px 530px 32px 530px;
+
+nav li a {
+    text-decoration: none;
+    color: #424242;
+    margin-right: 30px;
 }
-.banner-tittle{
+
+/* banner */
+.banner{
+    align-items: center;
+}
+.banner-head {
+    width: 850px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.banner-tittle {
     width: 862px;
     font-size: 4rem;
-    text-align: center;
     color: #131313;
     font-weight: 700;
+    text-align: center;
 }
-.btn{
 
+.banner-description {
+    width: 855px;
+    margin: 0 auto;
+    font-size: 1rem;
+    font-weight: 400;
+    color: #727272;
+    text-align: center;
+    margin-bottom: 25px;
 }
-.img{
-    width: 1440px;
-    padding: 70px 240px 240px 45px;
+.banner img{
+    margin-top: 25px;
+    width: 100%;
 }
