--- a/style.css
+++ b/style.css
@@ -75,24 +75,101 @@ nav li a {
     width: 100%;
 }
 
+
+
+main {
+    max-width: 1440px;
+    margin: 70px auto;
+}
+
+.teams-container {
+    width: 1200px;
+    display: flex;
+    align-items: center;
+    margin-top: 75px;
+}
+
+.teams-images {
+    margin-left: 150px;
+    margin-right: 65px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+
+.teams-details {
+    margin-right: 150px;
+}
+
+.teams-description {
+    width: 400px;
+    font-size: 1rem;
+    font-weight: 400;
+    color: #727272;
+    margin-top: 24px;
+    margin-bottom: 32px;
+}
+
+.teams-title {
+    font-size: 2.8rem;
+}
+.quick{
+   color: #727272;
+   font-weight: 500;
+}
+.of{
+    color:#131313;
+    font-weight: 700;
+}
+.feature{
+    color:#FF900E;
+    font-weight: 700;
+}
+
 /* responsive styles */
 @media screen and (max-width: 576px) {
-   
+
     .banner-tittle {
         width: 300px;
         padding-left: 15px;
         padding-right: 15px;
     }
+
     .banner-description {
         margin: 0;
         width: 340px;
         padding: 10px;
     }
-    
+
     header {
         padding: 20px;
     }
-    nav {
+
+    nav, .teams-container {
+        width: 100%;
         flex-direction: column;
+    }
+    .teams-images{
+        grid-template-columns: 1fr;
+        margin: 0;
+    }
+    .teams-details {
+        margin: 0px;
+        width: 100%;
+    }
+    .teams-description{
+        width: 100%;
+    }
+}
+
+@media screen and (min-width : 576px) and (max-width : 960px) {
+    header {
+        padding: 20px;
+    }
+
+    nav, .teams-container {
+        flex-direction: column;
+        width: 100%;
+        margin: auto;
     }
 }
