--- a/style.css
+++ b/style.css
@@ -113,17 +113,67 @@ main {
 .teams-title {
     font-size: 2.8rem;
 }
-.quick{
-   color: #727272;
-   font-weight: 500;
+
+.quick {
+    color: #727272;
+    font-weight: 500;
 }
-.of{
-    color:#131313;
+
+.of {
+    color: #131313;
     font-weight: 700;
 }
-.feature{
-    color:#FF900E;
+
+.feature {
+    color: #FF900E;
     font-weight: 700;
+}
+
+/* facts section */
+.text-light-gray {
+    width: 540px;
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 400;
+    margin-top: 24px;
+    margin-bottom: 100px;
+}
+
+.facts-title {
+    width: 258px;
+    font-size: 2.8rem;
+    color: #131313;
+    font-weight: 700;
+}
+
+.facts-card-container {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.card {
+    padding: 50px 40px;
+}
+
+.card-stats {
+    color: #424242;
+    font-size: 2.8rem;
+    font-weight: 600;
+}
+
+.card-title {
+    color: #727272;
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+.facts-card-container > .card img{
+    padding-left: 100px ;
+    padding-right: 100px ;
+}
+.facts-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
 }
 
 /* responsive styles */
@@ -145,19 +195,23 @@ main {
         padding: 20px;
     }
 
-    nav, .teams-container {
+    nav,
+    .teams-container {
         width: 100%;
         flex-direction: column;
     }
-    .teams-images{
+
+    .teams-images {
         grid-template-columns: 1fr;
         margin: 0;
     }
+
     .teams-details {
         margin: 0px;
         width: 100%;
     }
-    .teams-description{
+
+    .teams-description {
         width: 100%;
     }
 }
@@ -167,7 +221,8 @@ main {
         padding: 20px;
     }
 
-    nav, .teams-container {
+    nav,
+    .teams-container {
         flex-direction: column;
         width: 100%;
         margin: auto;
